@@ -20,6 +20,11 @@ What's New in Pylint 2.13.8?
 ============================
 Release date: TBA
 
+* Fix a false positive for ``undefined-loop-variable`` for a variable used in a lambda
+  inside the first of multiple loops.
+
+  Closes #6419
+
 * Fix a crash when linting a file that passes an integer ``mode=`` to
   ``open``
 
